src/objects/Journal_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Dirty_Wet__c</fullName>
        <label>Dirty/Wet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dirty</fullName>
                </value>
                <value>
                    <fullName>Wet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(End_Time__c   - Start_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feeding</fullName>
                </value>
                <value>
                    <fullName>Diaper Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Journal Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Journal Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>